--- a/Examples/L1C-example.ipynb
+++ b/Examples/L1C-example.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "7bba001c",
    "metadata": {},
    "outputs": [
@@ -90,32 +90,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latitude (395, 519)\n",
-      "longitude (395, 519)\n",
-      "scattering_angle (395, 519, 90)\n",
-      "solar_zenith_angle (395, 519, 90)\n",
-      "solar_azimuth_angle (395, 519, 90)\n",
-      "sensor_zenith_angle (395, 519, 90)\n",
-      "sensor_azimuth_angle (395, 519, 90)\n",
-      "i (395, 519, 90, 1)\n",
-      "q (395, 519, 90, 1)\n",
-      "u (395, 519, 90, 1)\n"
+      "                latitude: (395, 519)\n",
+      "               longitude: (395, 519)\n",
+      "        scattering_angle: (395, 519, 90)\n",
+      "      solar_zenith_angle: (395, 519, 90)\n",
+      "     solar_azimuth_angle: (395, 519, 90)\n",
+      "     sensor_zenith_angle: (395, 519, 90)\n",
+      "    sensor_azimuth_angle: (395, 519, 90)\n",
+      "                       i: (395, 519, 90, 1)\n",
+      "                       q: (395, 519, 90, 1)\n",
+      "                       u: (395, 519, 90, 1)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, None, None, None, None, None, None, None, None]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the keys and the shape of the data\n",
-    "[print(key, l1c_dict[key].shape) for key in l1c_dict.keys()]"
+    "[print('{:>24}: {}'.format(key, l1c_dict[key].shape)) for key in l1c_dict.keys()][0]\n"
    ]
   },
   {
